# Nova-Proj

./: README.md
Nova_Backend/: CMakeLists.txt  chatbot.db  trained_model.txt
Nova_Backend/datasets/: Intent.json  convertor.py  delete_table.py  inserter.py  intents.csv  remover.py
Nova_Backend/include/: Controller.hpp  utils.hpp
Nova_Backend/include/Core/: NeuralNet.hpp  TopicExtractor.hpp  WordVectorHelper.hpp
Nova_Backend/include/Humanizer/: ContextTracker.hpp  ResponseSelector.hpp  ResponseVariator.hpp
Nova_Backend/src/: Controller.cpp  utils.cpp
Nova_Backend/src/Core/: NeuralNet.cpp  main.cpp
Nova_Backend/src/Humanizer/: ContextTracker.cpp  ResponseSelector.cpp  ResponseVariator.cpp  TopicExtractor.cpp  WordVectorHelper.cpp
Nova_UI/: CMakeLists.txt  ViewDatabaseWidget.cpp  ViewDatabaseWidget.hpp  chatbubble.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Nova_UI/asset/: asset.qrc
